# JoyManager

./: .gitignore  BUILDING.md  CMakeLists.txt  LICENSE  README.md  installer.iss  joymanager.desktop
.github/workflows/: preview.yml  release.yml
src/: main.cpp
src/ble/: BleManager.cpp  BleManager.h
src/gui/: DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  FileManagerView.cpp  FileManagerView.h  RemoteFileSystemModel.cpp  RemoteFileSystemModel.h
src/protocol/: PixlProtocol.cpp  PixlProtocol.h
